# spec-probe

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
notebooks/: README.md  SpecProbe_Live_Fire.ipynb
prompts/: boundary.txt
public/traces/: live.jsonl  mixed-boundary.ngram.json  prose-flow.eagle.json  py-indent.medusa.json
python/: README.md  pyproject.toml
python/examples/: emit_demo_trace.py
python/specprobe_hook/: __init__.py  bridge.py  event_to_trace.py  extract.py  jsonl_sink.py  sweep.py  vllm_patch.py  writer.py
python/tests/: test_extract.py
schemas/: specprobe-event-v1.json  speculative-trace-v1.json
src/: App.tsx  index.css  types.ts
src/components/: AcceptanceCurve.tsx  FailureCallouts.tsx  ProbCompare.tsx  SideBySide.tsx  StrategyCompare.tsx  TokenLane.tsx  TraceLoader.tsx
src/lib/: bridge.ts  parseTrace.ts  scenarios.ts  simulators.ts  speculative.ts
src/types/: trace.ts
